[project]
name = "pbl5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.2",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "torchvision>=0.18.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
